Full parser revamp. Support setting variables. Integration tests.
Update parser primarily to properly store blocks implicitly
ended by the start of another directive. Remove some layers
of indentation to improve readability. This approach introduces
"continue" syntax to jump to next line once current line is handled.

Add bin/integration-tests to compare output files with expected
output. The integration test uses a shell script and looks at the
output files from the "conf/monobrew-test.conf" file.

Fix --nuke to correctly delete and recreate state-dir. Moved
to in-code logic instead of external shell scripts so it functions
even when the directory doesn't exist to record the output. Side
effect is that op counters are more reliable and don't depend on
whether --nuke is set.

Move scanner into its own class

Use more regexp for parsing so as a side effect support whitespace
in more locations.

--- a/conf/monobrew-test.conf
+++ b/conf/monobrew-test.conf
@@ -25,3 +25,25 @@ new-op record-failing-command
 exec shell until end
 exit 123
 end
+
+new-op shell-from-scanned-string
+exec shell from pkgs.apt
+
+var test-script-1line is echo test 1-liner
+
+new-op shell-from-var-first
+exec shell from test-script-1line
+
+new-op shell-from-var-reuse
+exec shell from test-script-1line
+
+var test-script-multiline until END
+echo multi
+echo line
+END
+
+new-op shell-from-var-multiline
+exec shell from test-script-multiline
+
+#new-op halt-cant-test
+#halt-if-fail -- can't test this because execution will fail
