Support include-config and multiple configs on CLI
(Most) directives are case-insensitive now

Add include-config check to integration test

Centralize status/exit messages somewhat

README updates to match changes

--- a/conf/monobrew-test.conf
+++ b/conf/monobrew-test.conf
@@ -45,5 +45,10 @@ END
 new-op shell-from-var-multiline
 exec shell from test-script-multiline
 
+include-config conf/include-test.conf
+
+New-Op mixed-case
+EXec ShElL FRom test-script-1line
+
 #new-op halt-cant-test
 #halt-if-fail -- can't test this because execution will fail
